--- a/Приемка товара.md
+++ b/Приемка товара.md
@@ -1,2 +1,74 @@
-# Manual_1C
-ddd
+# Формирование документов поступления алкогольной продукции
+
+## шаг 1
+Для осуществления приемки алкогольной продукции, первым делом необходимо выбрать в меню программы плашку **Закупки** на скрине отображена под номером 1. Следом в открывшемся окне, **входящие ТТН** под номером 2.
+
+<image src="https://github.com/kharlakov-vv/Manual_1C/blob/main/scr/Приемка_1_Закупки_ЕГАИС_Входящиее%20ТТН.jpg?raw=true" alt="Текст с описанием картинки">
+
+<br>
+</br>
+
+## шаг 2
+Чтобы вино и водочные товары отобразились на нашем балансе, мы должны получить от поставщика всю информацию через систему ЕГАИС - для этого необходимо выполнить обмен. 
+
+<br>
+
+</br>
+<image src="https://github.com/kharlakov-vv/Manual_1C/blob/main/scr/Приемка_1_ТТН_ОбменсЕГАИС.jpg?raw=true" alt="Текст с описанием картинки">
+<br>
+
+</br>
+
+## шаг 3
+
+Полученную накладную можно просмотреть, открыв ее двойным щелчком. Пользователь может Подтвердить ТТН цифра 1 (также пользователь может проверить разделы товары и транспортный раздел) или, если такой поставки в магазин не ожидается и ТТН была оформлена ошибочно цифра 2, то послать уведомление в
+систему ЕГАИС об ошибке, воспользовавшись командой Отказаться от ТТН. Операция отказа от ТТН однократная. Повторной или уточняющей операции интерфейсом интеграции с ЕГАИС не предусмотрено. По ошибочно
+подтвержденной ТТН можно Запросить отмену проведения.
+
+<br>
+
+</br>
+
+---
+
+<image src="https://github.com/kharlakov-vv/Manual_1C/blob/main/scr/Приемка_3_Закупки_ЕГАИС_Входящиее%20ТТН_подверждение%20или%20отказ.jpg?raw=true" alt="Текст с описанием картинки">
+<br>
+
+</br>
+
+## шаг 4
+
+Что делать, если произошел технический сбой и мы ничего не получили, необходимо открыть список **ЕЩЕ** цифра 1 , после того как открылся выпадающий список, ноебходимо пролистать вниз и выбрать запросить ТТН по идентификатору
+
+<image src="https://github.com/kharlakov-vv/Manual_1C/blob/main/scr/Приемка_4_Закупки_ЕГАИС_Входящиее%20ТТН_ЕЩЕ_если_неПРИШЛО.jpg?raw=true" alt="Текст с описанием картинки">
+
+<br>
+
+</br>
+
+откроется страничка
+
+<image src="https://github.com/kharlakov-vv/Manual_1C/blob/main/scr/Приемка_4.2_Закупки_ЕГАИС_Входящиее%20ТТН_ЕЩЕ_если_неПРИШЛО.jpg?raw=true" alt="Текст с описанием картинки">
+<br>
+
+</br>
+В первое поле цифра 1 необходимо добавить организацию -  ООО Русский Терруар , во второе поле цифра 2 ТТН - Идентификатор ТТН можно запросить у поставщика.
+
+
+## шаг 5
+
+Убедившись, что ТТН ЕГАИС относится к ожидаемой поставке, пользователь может создать на ее основании документ Поступление товаров. 
+
+Сперва необходимо поставить курсор на строку цифра 1, затем перейти к цифре 2 Оформить поступление и выбрать один из трех вариантов: Оформить новое поступление, Связать с имеющимся поступлением, Связать с имеющимся перемещением. Заполнить пустые поля и провести документ.
+<br>
+
+</br>
+<image src="https://github.com/kharlakov-vv/Manual_1C/blob/main/scr/Приемка_5_ЕГАИС_ПОСТУПЛЕНИЕ.jpg?raw=true" alt="Текст с описанием картинки">
+<br>
+
+</br>
+
+Если не все позиции ТТН ЕГАИС сопоставлены номенклатуре конфигурации, на
+закладке Товары по факту такая строка выделяется серым цветом, поле Номенклатура будет подчеркнуто красной пунктирной линией. Непосредственно из документа можно воспользоваться сервисами сопоставления
+номенклатуры и организаций ЕГАИС. Для этого необходимо сделать двойной щелчок мыши в поле Номенклатура. Откроется форма Сопоставление номенклатуры ЕГАИС. В ней можно отфильтровать номенклатуру, найти
+интересующую и сопоставить с номенклатурой ЕГАИС, воспользовавшись командой Сопоставить и выбрать, или создать новую номенклатурную позицию (команда Создать номенклатуру).
