--- a/Приемка товара.md
+++ b/Приемка товара.md
@@ -69,6 +69,15 @@
 </br>
 
 Если не все позиции ТТН ЕГАИС сопоставлены номенклатуре конфигурации, на
-закладке Товары по факту такая строка выделяется серым цветом, поле Номенклатура будет подчеркнуто красной пунктирной линией. Непосредственно из документа можно воспользоваться сервисами сопоставления
-номенклатуры и организаций ЕГАИС. Для этого необходимо сделать двойной щелчок мыши в поле Номенклатура. Откроется форма Сопоставление номенклатуры ЕГАИС. В ней можно отфильтровать номенклатуру, найти
-интересующую и сопоставить с номенклатурой ЕГАИС, воспользовавшись командой Сопоставить и выбрать, или создать новую номенклатурную позицию (команда Создать номенклатуру).
+закладке Товары по факту такая строка выделяется серым цветом (цифра 1 - в примере она не выделена серым цветом), поле Номенклатура будет подчеркнуто красной пунктирной линией. Непосредственно из документа можно воспользоваться сервисами сопоставления
+номенклатуры и организаций ЕГАИС. Для этого необходимо навести курсор на поле, выделить строку - жмакунть мышкой и откроется форма Сопоставление номенклатуры ЕГАИС. В ней можно отфильтровать номенклатуру, найти интересующую и сопоставить с номенклатурой ЕГАИС, воспользовавшись командой Сопоставить и выбрать, или создать новую номенклатурную позицию (команда Создать номенклатуру).
+
+<br>
+</br>
+<image src="https://github.com/kharlakov-vv/Manual_1C/blob/main/scr/Приемка_5_ЕГАИС_ПОСТУПЛЕНИЕ_СОПОСТАВЛЕНИЕ.jpg?raw=true" alt="Текст с описанием картинки"> 
+
+После необходимо вернуться к шагу 3 и подтвердить получение. Далее отправка подтверждения поступления в ЕГАИС статус накладной изменяется на Передан акт подтверждения.
+
+Если юзер отправляет в ЕГАИС подтверждение ТТН из документа Входящая ТТН, то статус ТТН сразу изменяется на **Передан акт подтверждения**. При этом в документе Поступление товаров, созданном на
+основании такой ТТН, команда **Отправить в ЕГАИС** будет неактивна, так как подтверждение этой накладной уже не требуется. Вне зависимости от того, подтвержден ли документ-основание (ТТН), в документе Поступление
+товаров предоставляется возможность редактирования цены, ставки НДС и суммы НДС табличной части Товары по факту. Количество товаров в подтвержденной поставке изменить нельзя. 
