--- a/Приемка товара.md
+++ b/Приемка товара.md
@@ -76,8 +76,43 @@
 </br>
 <image src="https://github.com/kharlakov-vv/Manual_1C/blob/main/scr/Приемка_5_ЕГАИС_ПОСТУПЛЕНИЕ_СОПОСТАВЛЕНИЕ.jpg?raw=true" alt="Текст с описанием картинки"> 
 
+<br>
+</br> 
 После необходимо вернуться к шагу 3 и подтвердить получение. Далее отправка подтверждения поступления в ЕГАИС статус накладной изменяется на Передан акт подтверждения.
 
 Если юзер отправляет в ЕГАИС подтверждение ТТН из документа Входящая ТТН, то статус ТТН сразу изменяется на **Передан акт подтверждения**. При этом в документе Поступление товаров, созданном на
 основании такой ТТН, команда **Отправить в ЕГАИС** будет неактивна, так как подтверждение этой накладной уже не требуется. Вне зависимости от того, подтвержден ли документ-основание (ТТН), в документе Поступление
 товаров предоставляется возможность редактирования цены, ставки НДС и суммы НДС табличной части Товары по факту. Количество товаров в подтвержденной поставке изменить нельзя. 
+
+Поддерживается возможность сопоставления входящей ТТН ЕГАИС с уже созданным документом Поступление товаров. Для этого в списке входящих ТТН ЕГАИС необходимо сделать двойной щелчок в поле Поступление товаров
+и нажать кнопку Выбрать поступление.
+
+<image src="https://github.com/kharlakov-vv/Manual_1C/blob/main/scr/Приемка_5_связать_поступление.jpg?raw=true" alt="Текст с описанием картинки"> 
+
+
+## шаг 6
+
+Интерфейсом конфигурации поддерживается печать этикеток справок 2 из входящей ТТН ЕГАИС. Пользователь может распечатать этикетки, наклеить их на бутылки с алкогольной продукцией и во всех документах, в которых
+требуется указание справок 2 (Акт списания ЕГАИС, Передача в торговый зал ЕГАИС и т.д.) достаточно будет отсканировать этикетку и табличная часть документа будет заполнена автоматически. Будет заполнена
+информация об алкогольной продукции, а также справка 2. Для печати этикеток справок 2 необходимо в списке документов Входящие ТТН ЕГАИС выделить интересующую накладную цифра 1 нажать на кнопку печать цифра 2 из выпадающего списка выбрать Этикетки справок 2 ЕГАИС.
+
+
+<image src="https://github.com/kharlakov-vv/Manual_1C/blob/main/scr/Приемка_5_ТТН_ЭТИКЕТКИ.jpg?raw=true" alt="Текст с описанием картинки"> 
+
+Откроется стандартная форма печати этикеток и ценников. Пользователю необходимо заполнить Штрихкод справки 2, указать шаблон этикетки и распечатать этикетки. Шаблон этикетки разрабатывается Пользователем
+самостоятельно стандартными средствами
+
+В конфигурации поддерживается информирование пользователя о необходимости создавать документы ЕГАИС. При оформлении документов Поступление товаров, Перемещение товаров, Внутреннее перемещение
+товаров, Возврат поставщику на склад/со склада с типом «Торговый зал» выводится соответствующее оповещение Пользователя.
+<br>
+</br>
+## Учет расхождений при поступлении
+
+В случае, если при пересчете товара выявились расхождения фактического наличия товаров с накладной, пользователь, так же как и при приемке обычной накладной поставщика, устанавливает флаг Есть расхождения, и на
+закладке Товары по факту вносит изменения.
+
+<image src="https://github.com/kharlakov-vv/Manual_1C/blob/main/scr/Приемка_5_Расхождение_При_ПОСТУПЛЕНИИ.jpg?raw=true" alt="Текст с описанием картинки"> 
+<br>
+</br>
+При этом формируются итоги по факту и по данным поставщика. При выполнении команды Отправить в ЕГАИС данные по расхождениям будут переданы в систему ЕГАИС для подтверждения поставщиком. При этом поставщику
+будут отправлены только недостачи. На обнаруженные излишки необходимо у поставщика запросить дополнительную накладную, например, позвонив поставщику или отправив электронное письмо.
